<resources>
    <string name="app_name">TWB</string>
    <string name="username">帳號</string>
    <string name="password">密碼</string>
    <string name="forget_password">忘記密碼</string>
    <string name="login">登入</string>
    <string name="logout">登出</string>
    <string name="register">註冊</string>
    <string name="clear">清除</string>
    <string name="email">E-mail</string>
    <string name="send">送出</string>
    <string name="home">首頁</string>
    <string name="search">搜尋</string>
    <string name="profile">簡介</string>
    <string name="upload">上傳</string>
    <string name="title">標題</string>
    <string name="content">內容</string>
    <string name="post">發布</string>
    <string name="complete">完成</string>

    <string name="error">錯誤</string>
    <string name="insert_comment">新增評論</string>

    <string name="camera">相機</string>
    <string name="gallery">圖庫</string>

    <string name="delete_user">刪除帳號</string>
    <string name="uploaded_article">上傳過的文章</string>




</resources>
